k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: setrr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: setrr
  template:
    metadata:
      labels:
        app: setrr
    spec:
      containers:
        - name: setrr
          image: denislabelle/setrr:0.0.11
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: setrr-service
spec:
  selector:
    app: setrr
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: setrr-ingress
  annotations:
    #    Warning: annotation "kubernetes.io/ingress.class" is deprecated, please use 'spec.ingressClassName' instead
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: "nginx"
  rules:
    - host: denilab.ca #@denlabs.com
      http:
        paths:
          - pathType: Prefix
            path: "/leads"
            backend:
              service:
                name: setrr-service
                port:
                  number: 80
